--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="stylesheet" type="text/css" href="../css/header.css">
-	<link rel="stylesheet" type="text/css" href="../css/banner.css">
-	<link rel="stylesheet" type="text/css" href="../css/about.css">
-	<link rel="stylesheet" type="text/css" href="../css/product.css">
-	<link rel="stylesheet" type="text/css" href="../css/used_container.css">
-	<link rel="stylesheet" type="text/css" href="../css/testimonials.css">
-	<link rel="stylesheet" type="text/css" href="../css/contact.css">
-	<link rel="stylesheet" type="text/css" href="../css/funfact.css">
-	<link rel="stylesheet" type="text/css" href="../css/footer.css">
-	<link rel="stylesheet" type="text/css" href="../css/login.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="header.css">
+	<link rel="stylesheet" type="text/css" href="banner.css">
+	<link rel="stylesheet" type="text/css" href="about.css">
+	<link rel="stylesheet" type="text/css" href="product.css">
+	<link rel="stylesheet" type="text/css" href="used_container.css">
+	<link rel="stylesheet" type="text/css" href="testimonials.css">
+	<link rel="stylesheet" type="text/css" href="contact.css">
+	<link rel="stylesheet" type="text/css" href="funfact.css">
+	<link rel="stylesheet" type="text/css" href="footer.css">
+	<link rel="stylesheet" type="text/css" href="login.css">
 
 </head>
 <body>
@@ -28,7 +28,7 @@
 <!-- header start -->
 
 <header>
-	<img src="../img/logo/logo_1.png" alt="logo" height="100" width="100">
+	<img src="logo_1.png" alt="logo" height="100" width="100">
 
 	<nav class="navbar">
 		<a href="#">Home</a>
@@ -57,7 +57,7 @@
 	</div>
 
 	<div class="banner_img">
-		<img src="../img/banner/banner_1.png">
+		<img src="banner_1.png">
 	</div>
 </section>
 
@@ -69,7 +69,7 @@
 
 <section class="about_container" id="about">
 	<div class="about_img">
-		<img src="../img/about/about_3.jpg" >
+		<img src="about_3.jpg" >
 	</div>
 
 	<div class="about_details">
@@ -91,7 +91,7 @@
 		
 		<!-- 1st  -->
 		<div class="singal_card">
-			<img src="../img/product/product_1.jpg" alt="product_1" height="300">
+			<img src="product_1.jpg" alt="product_1" height="300">
 
 			<h2>black graphs</h2>
 
@@ -107,7 +107,7 @@
 
 		<!-- 2nd  -->
 		<div class="singal_card">
-			<img src="../img/product/product_3.jpg" alt="product_1" height="300">
+			<img src="product_3.jpg" alt="product_1" height="300">
 
 			<h2>mix fruits</h2>
 
@@ -123,7 +123,7 @@
 
 		<!-- 3rd  -->
 		<div class="singal_card">
-			<img src="../img/product/product_2.jpg" alt="product_1" height="300">
+			<img src="product_2.jpg" alt="product_1" height="300">
 
 			<h2>pomegranate</h2>
 
@@ -139,7 +139,7 @@
 
 		<!-- 4th  -->
 		<div class="singal_card">
-			<img src="../img/product/product_4.jpg" alt="product_1" height="300">
+			<img src="product_4.jpg" alt="product_1" height="300">
 
 			<h2>green guava</h2>
 
@@ -155,7 +155,7 @@
 
 		<!-- 5th  -->
 		<div class="singal_card">
-			<img src="../img/product/product_5.jpg" alt="product_1" height="300">
+			<img src="product_5.jpg" alt="product_1" height="300">
 
 			<h2>organic orange</h2>
 
@@ -171,7 +171,7 @@
 
 		<!-- 6th  -->
 		<div class="singal_card">
-			<img src="../img/product/product_6.jpg" alt="product_1" height="300">
+			<img src="product_6.jpg" alt="product_1" height="300">
 
 			<h2>mix fruits</h2>
 
@@ -195,25 +195,25 @@
 
 	<div class="used_content">
 		<div class="singal_content">
-			<img src="../img/icon/icon_1.png" alt="used_1">
+			<img src="icon_1.png" alt="used_1">
 			<label>breakfast</label>
 			<p>on busy morning, just garn and go</p>
 		</div>
 
 		<div class="singal_content">
-			<img src="../img/icon/icon_2.png" alt="used_1">
+			<img src="icon_2.png" alt="used_1">
 			<label>Movie</label>
 			<p>enjoying your time period with milky</p>
 		</div>
 
 		<div class="singal_content">
-			<img src="../img/icon/icon_3.png" alt="used_1">
+			<img src="icon_3.png" alt="used_1">
 			<label>Workout</label>
 			<p>as clean energy before or after celoeries</p>
 		</div>
 
 		<div class="singal_content">
-			<img src="../img/icon/icon_4.png" alt="used_1">
+			<img src="icon_4.png" alt="used_1">
 			<label>travels</label>
 			<p>stay in your bags for an easy, go to snack</p>
 		</div>
@@ -232,7 +232,7 @@
 		  	<!-- 1st Review -->
 			  <div class="carousel-cell">
 			  		<div class="singal_review">
-						<img src="../img/icon/man.png" alt="testimonials_img_1">
+						<img src="man.png" alt="testimonials_img_1">
 						<h4>Ajay Gajjar</h4>
 
 						<p>Awesome concept and great products from all over India....placed an order for stuff from Hyderabad, Ahmedabad, Pune, Delhi and Agra...famous delicacies from famed makers....everything was authentic and fresh as promised.Awesome concept and great products from all over India....placed an order for stuff from Hyderabad, Ahmedabad, Pune, Delhi and Agra...famous delicacies from famed makers....everything was authentic and fresh as promised.</p>
@@ -251,7 +251,7 @@
 
 			  <div class="carousel-cell">
 			  		<div class="singal_review">
-						<img src="../img/icon/woman.png" alt="testimonials_img_1">
+						<img src="woman.png" alt="testimonials_img_1">
 						<h4>Anjali Gajjar</h4>
 
 						<p>Today I received my 2nd order. I understand the small problems you had last week, every problem is a learning opportunity so wish you all the best . I must say all your delicacies are super tasty , fresh and well packed.Today I received my 2nd order. I understand the small problems you had last week, every problem is a learning opportunity so wish you all the best . I must say all your delicacies are super tasty , fresh and well packed.</p>
@@ -270,7 +270,7 @@
 
 			  <div class="carousel-cell">
 			  		<div class="singal_review">
-						<img src="../img/icon/child.png" alt="testimonials_img_1">
+						<img src="child.png" alt="testimonials_img_1">
 						<h4>Vraj Pancholi</h4>
 
 						<p>Dear Delight Foods, You made my day today. Yesterday I have placed the order I got it today on special delivery. Good Service, Testy Product, Responsiveness.must say all your delicacies are super tasty , fresh and well packed.Dear Delight Foods, You made my day today. Yesterday I have placed the order I got it today on special delivery. Good Service, Testy Product, Responsiveness.must say all your delicacies are super tasty , fresh and well packed.</p>
@@ -298,7 +298,7 @@
 
 	<div class="contact_content">
 		<div class="contact_img" style="height: 450px;">
-			<img src="../img/contact/contact_3.jpg" alt="contact_img">
+			<img src="contact_3.jpg" alt="contact_img">
 		</div>
 
 		<div class="contact_form">
@@ -354,7 +354,7 @@
 	<div class="footer_content">
 		<div class="about_footer">
 			<div style="height: 100px;width: 100px;display: flex;">
-				<img src="../img/logo/logo_1.png" >
+				<img src="logo_1.png" >
 			</div>
 			<p>Milky Man Ltd was founded in the year 2001 and is headquartered in ahmedabad, India.The Company offers a range of products, which include cheese, ghee, whey proteins, paneer, curd, yogurt, milk products, liquid milk, milk-based beverages, and milk powders. </p>
 
@@ -454,8 +454,8 @@
 </div>
 <!-- Login End -->
 
-<script type="text/javascript" src="../js/navbar.js"></script>
-<script type="text/javascript" src="../js/login_model_mobile.js"></script>
+<script type="text/javascript" src="navbar.js"></script>
+<script type="text/javascript" src="login_model_mobile.js"></script>
 
 <script type="text/javascript">
 var model_web = document.getElementById("login_model");
